--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
   <canvas id="stars"></canvas>
+  <canvas id="shootingStars"></canvas>
 
   <header>
     <h1>Galaxy Marketplace</h1>
@@ -22,7 +23,7 @@
     <div class="modal-content glass">
       <span id="modalClose" class="close">&times;</span>
       <h2 id="modalTitle"></h2>
-      <p>Select a crypto payment method and send payment to the address below:</p>
+      <p>Send payment to one of the addresses below:</p>
       <div id="wallets"></div>
       <button id="confirmPaymentBtn" class="btn-primary">I have sent the payment</button>
       <p id="discordInfo" class="discord-instruction hidden">
